2008-02-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnsealedUninheritedInternalClassesTest.cs: New. Unit tests
	by Scott Peterson.
	* UseIsOperatorTest.cs: New. Unit tests.
	* Test.Rules.Performance.mdp: Update project file.

2008-02-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesTest.cs: Add more test cases.
	* DontIgnoreMethodResultTest.cs: Add test cases for more exceptions.

2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesTest.cs: Add nested enum test 
	cases.

2008-01-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add more test cases for 
	serialization constructors.

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnsealedConcreteAttributesTest.cs: New. Unit tests by 
	Daniel Abramov
	* Test.Rules.Performance.mdp: Add new test for MonoDevelop project 
	file.

2008-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidReturningArraysOnPropertiesTest.cs: New. Unit tests by 
	Adrian Tsai
	* AvoidUninstantiatedInternalClassesTest.cs: Add new enum test cases.
	* Test.Rules.Performance.mdp: Add new test for MonoDevelop project 
	file.

2007-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs, AvoidUnusedParametersTest.cs:
	Fix anonymous test cases since GMCS and CSC don't compile the types,
	or methods, using the same names.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidUnusedParametersTest.cs: Added a testcase for anonymous methods
	due #350288 bug.

2007-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUninstantiatedInternalClassesTest.cs: Change the behavior of
	a test since the condition is already checked by another rule.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidUncalledPrivateCodeTest.cs: Added testcase for check compiler
	generated methods, by example anonymous methods.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com> 
