@@ -1,3 +1,7 @@
+2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidUncalledPrivateCodeTest.cs: Fix RuleResult checks in loops.
+
 2008-02-06  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidUnsealedUninheritedInternalClassesTest.cs: New. Unit tests
